[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "Dosepy"
version = "0.10.0"
authors = [
  { name="Luis Alfonso Olivares Jimenez", email="alfonso.cucei.udg@gmail.com" },
]
description = "Film dosimetry and gamma analysis for dose distributions in radiotherapy"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENCE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Physics",
    "Natural Language :: Spanish",
]
keywords = ["Radiotherapy", "Dose distribution", "gamma index", "python"]
dependencies = [
  "imageio >= 2.35.1",
  "numpy >= 2.1.1",
  "matplotlib >= 3.9.2",
  "tifffile >= 2024.09.20",
  "scipy >= 1.14.1",
  "pydantic >= 2.9.2",
  "pydicom >= 3.0.1",
  "scikit-image >= 0.25.0",
  "tomlkit >= 0.13.2",
  "tqdm >= 4.66.5",
  "pyyaml >= 6.0.2",
  "pytest >= 8.3.5",
  "pip >= 25.0.1",
  "plotly>=6.0.1",
]
[project.urls]
homepage = "https://dosepy.readthedocs.io/en/latest/intro.html"
repository = "https://pypi.org/project/Dosepy/"
Bug-Tracker = "https://github.com/LuisOlivaresJ/Dosepy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Dosepy = ["*.csv", "*.png", "*.toml"]
