[metadata]
name = Dosepy
version = 0.0.4
author = Luis Alfonso Olivares Jimenez
author_email = alfonso.cucei.udg@gmail.com
description = Análisis de distribuciones de dosis en radioterapia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuisOlivaresJ/Dosepy
project_urls =
    Bug Tracker = https://github.com/LuisOlivaresJ/Dosepy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: Spanish


keywords = Radiotherapy, Dose distribution, gamma index, python

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requieres =
  numpy >= 1.20.3
  matplotlib >= 3.4.2

include_package_data = True
#package_data = "": ["*.txt"]


[options.packages.find]
where = src

[options.package_data]
* = *.txt
